# hupyy-temporal

./: .dockerignore  .env.example  .gitignore  CI_CD_GUIDE.md  CLAUDE_SUBSCRIPTION_AUTH.md  DEMO_STYLING_SUMMARY.txt  DIGITALOCEAN_DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_ORGANIZATION_ANALYSIS.md  Dockerfile  LICENSE  Makefile  PLAYWRIGHT_SELECTORS_GUIDE.md  QUICK_DEPLOY.md  README.md  RELEASE-NOTES-v2.0.0.md  RUN_TESTS.md  STYLING_EXPLORATION_INDEX.md  STYLING_INTEGRATION_GUIDE.md  deploy-to-droplet.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_comprehensive_test.sh  scratch_run.py  test_explanation_bug.py  test_missing_data_fix.py  test_preamble_bug.py
.do/: app.yaml
.streamlit/: config.toml
ai/: __init__.py  claude_client.py  response_parsers.py
config/: constants.py  user_preferences.json
data/: external-group-memberships.json  flagship.json  free-form-text-simple-external.md  free-form-text-simple-sat.md  free-form-text-simple.md  free-form-text.md  smt-lib-test-matrix.md  unknown_case.json
demo/: Dockerfile  app.py  app.py.backup  init.py
docs/: ARCHITECTURE.md  ARCHITECTURE_FOR_INVESTORS.md  DOMAIN_INDEPENDENCE_ANALYSIS.md  EXTERNAL_FILE_LOADING.md  FULL_SYSTEM_ARCHITECTURE_PROPOSAL.md  IMPLEMENTATION_STRUCTURED_PROMPT_V1.md  PDF_REPORT_GENERATION.md  PROMPT_ENGINEERING_ANALYSIS.md  README.md  TECHNICAL_DEBT_ANALYSIS.md  extending-to-multiple-theories.md
engine/: encode.py  schemas.py  solver.py
eval/: README.md  llm_runs.json
hupyy_temporal/: __init__.py
hypotheses/: README.md
lib/: libcvc5jni.dylib  (+7 more)
(+282 files in other folders)
