[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hupyy_temporal"
version = "0.1.0"
description = "SMT-based Temporal Reasoning Engine with proof generation"
authors = [
    { name = "Eitan Nahmias" }
]
dependencies = []

[tool.setuptools.packages.find]
include = ["engine", "demo", "eval", "data", "proofs"]
